--- a/react_app.html
+++ b/react_app.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>React</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   </head>
   <body>
-    <h1>React</h1>
-    <div id="root">wait...</div>
+    <h1 class="bg-primary text-white display-4">React</h1>
+    <div class="container mt-3">
+      <div id="root">wait...</div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
