--- a/react_app.html
+++ b/react_app.html
@@ -15,10 +15,14 @@
     </div>
     <script type="text/babel">
       let dom = document.querySelector('#root')
+
+      let title = "新タイトル"
+      let message = "新しいメッセージです。"
+
       let el = (
-        <div>
-          <h2>JSX sample</h2>
-          <p>This is sample message.</p>
+        <div className="alert alert-primary">
+          <h3>{title}</h3>
+          <p>{message}</p>
         </div>
       )
       ReactDOM.render(el, dom)
