属性の値を設定する

--- a/react_app.html
+++ b/react_app.html
@@ -16,13 +16,13 @@
     <script type="text/babel">
       let dom = document.querySelector('#root')
 
-      let title = "新タイトル"
       let message = "新しいメッセージです。"
+      let link = "http://googole.com"
 
       let el = (
         <div className="alert alert-primary">
-          <h3>{title}</h3>
-          <p>{message}</p>
+          <h4>{message}</h4>
+          <h5><a href={link}>this is link!</a></h5>
         </div>
       )
       ReactDOM.render(el, dom)
