スタイルの設定

--- a/react_app.html
+++ b/react_app.html
@@ -16,13 +16,19 @@
     <script type="text/babel">
       let dom = document.querySelector('#root')
 
+      let title = "新タイトル"
       let message = "新しいメッセージです。"
-      let link = "http://googole.com"
+
+      const msg_s = {
+        fontSize:"20pt",
+        color:"red",
+        border:"1px solid blue"
+      }
 
       let el = (
         <div className="alert alert-primary">
-          <h4>{message}</h4>
-          <h5><a href={link}>this is link!</a></h5>
+          <h4>{title}</h4>
+          <p style={msg_s}>{message}</p>
         </div>
       )
       ReactDOM.render(el, dom)
