クリックするとカウントする

--- a/react_app.html
+++ b/react_app.html
@@ -21,19 +21,21 @@
 
       var counter = 0
 
-      setInterval(() => {
+      let doAction = (event)=> {
         counter++
         let el = (
           <div>
             <h4>{title}</h4>
             <h6>{message}</h6>
-            <h5 className="alert alert-primary">
+            <h5 className="alert alert-primary" onClick={doAction}>
               count: {counter}.
             </h5>
           </div>
         )
         ReactDOM.render(el, dom)
-      }, 1000)
+      }
+
+      doAction()
     </script>
   </body>
 </html>
