フォームの値の利用

--- a/react_app.html
+++ b/react_app.html
@@ -17,19 +17,28 @@
       let dom = document.querySelector('#root')
 
       let title = "React page."
-      let message = "メッセージを表示します。"
+      let message = "お名前をどうぞ。"
+      let in_val = '';
 
-      var counter = 0
+      let doChange = (event) => {
+        in_val = event.target.value
+        message = 'こんにちは、' + in_val + 'さん！！'
+      }
 
-      let doAction = (event)=> {
-        counter++
+      let doAction = (event) => {
         let el = (
           <div>
             <h4>{title}</h4>
             <h6>{message}</h6>
-            <h5 className="alert alert-primary" onClick={doAction}>
-              count: {counter}.
-            </h5>
+            <div className="alert alert-primary">
+              <div className="form-group">
+                <label>Input:</label>
+                <input typr="text" className="form-control" id="input" onChange={doChange} />
+              </div>
+              <button onClick={doAction} className="btn btn-primary">
+                Click
+              </button>
+            </div>
           </div>
         )
         ReactDOM.render(el, dom)
